Bugfix post featured images not showing on home

--- a/uno/style.css
+++ b/uno/style.css
@@ -223,7 +223,7 @@ body.home .homepage-blog .entry p {
 }
 
 body.home .has-post-thumbnail img {
-  display: none;
+  /*display: none;*/
 }
 
 .homepage-blog {
